fixed the spacing in the related issues links

--- a/pt-1/starter-code/css/blogCSS.css
+++ b/pt-1/starter-code/css/blogCSS.css
@@ -76,3 +76,7 @@ footer {
     background-color: skyblue;
     padding-bottom: 1.5em;
 }
+
+.issueNav li a {
+    margin-left: -30px;
+}
